# FIREWorks

./: .gitignore  PYTHON_SETUP.md  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
fireworks/: __init__.py
fireworks/core/: __init__.py  base.py  market_regime.py  metrics.py
fireworks/strategies/: __init__.py
fireworks/strategies/gbm_finite_analytic/: __init__.py  calculator.py  models.py  strategy.py
fireworks/strategies/gbm_infinite_analytic/: __init__.py  calculator.py  models.py  strategy.py
fireworks/strategies/heston_stiff_perturbative/: __init__.py  calculator.py  models.py  strategy.py
fireworks/strategies/mc_strategy/: __init__.py  calculator.py  models.py  strategy.py
fireworks/utils/: __init__.py  helpers.py
notebooks/: GBM-Finite-MC-Comparison.ipynb  GBM-Infinite-MC-Comparason.ipynb  Heston-Parameter-Calibration.ipynb  Heston-Stiff-Perturbative-Validation.ipynb
papers/probability_of_ruin/: main.tex  references.bib
papers/probability_of_ruin/sections/: introduction.tex  methodology.tex  results.tex
tests/: __init__.py
tests/test_strategies/: __init__.py  test_gbm_finite_analytic.py  test_gbm_infinite_analytic.py  test_heston_stiff_perturbative.py  test_mc_strategy.py
